removed welcome message and fixed other things causing spacing issues

--- a/stylesheets/greystyles.css
+++ b/stylesheets/greystyles.css
@@ -196,15 +196,15 @@ a.link:visited{
 	padding:0;
 	top:0;
 	margin-top:6px;
-	display:inline;
+	display:block;
 	float:left;
 	margin-left:20px;
 }
 
 #new_review {
-	width:7%;
+	width:10%;
 	margin:0 auto;
-	left:-61%;
+	left:-63%;
 	margin-top:8px;
 	white-space:normal;
 	position:relative;
@@ -231,6 +231,7 @@ a.link:visited{
 	margin-top:5px;
 	width:50%;
 	float:left;
+	padding-left:15%;
 }
 
 #Tabs ul.tabslist li{
@@ -331,7 +332,7 @@ a.link:visited{
     background-position:bottombottom;
 }
 
-#content_2, #content_3 {display:none;}
+#content_1, #content_3 {display:none;}
 
 #profie_name {
 	padding-left:40px;
@@ -346,10 +347,10 @@ a.link:visited{
 
 #searching {
 	position:relative;
-	float:right;
-	width:30%;
+	left:0%;
+	width:20%;
 	padding-top:1%;
-	display:inline;
+	display:inline-block;
 }
 
 #search_field {
@@ -357,14 +358,14 @@ a.link:visited{
 	margin-top:1%;
 	font-size:16px;
 	display:inline;
-	float:left;
 }
 
 #search_btn {
-	width:25%;
-	position:relative;
-	top:0px;
+	width:35%;
+	position:absolute;
+	top:25%;
 	float:right;
+	left:80%;
 	letter-spacing:1px;
 	border:1px solid #000000;
 	background:#30AACF;
